Organized html and css files for collaborators

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -61,3 +61,15 @@ ul {
 }
 
 /* End Global Rules */
+/* Start Landing Section */
+.landing {
+}
+/* End Landing Section */
+/* Start products section */
+.products {
+}
+/* End products section */
+/* Start our history section */
+.history {
+}
+/* End our history section */
