--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600&display=swap');
 /* Start Global Rules */
 * {
   -webkit-box-sizing: border-box;
@@ -115,6 +116,310 @@ ul {
 /* Start products section */
 .products {
 }
+
+/* welcome section start */
+.welcome-section{
+  /* width: 100%; */
+  /* height: 100vh; */
+  text-align: center;
+  font-size: 18px;
+  margin-right: 30px;
+  margin-left: 30px;
+
+}
+
+.welcome-section h4{
+  line-height: 30px;
+  font-weight: 400;
+}
+
+.welcome-section h5{
+  font-size: 18px;
+  color: #2fc2e2;
+  margin-bottom: 10px;
+  font-weight: 300;
+}
+
+.welcome-section h3{
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 640px)  {
+  .welcome-section{
+      font-size: 15px;
+  } 
+}
+
+
+/* services start */
+.services{
+      display: grid;
+      grid-template-columns: repeat(3, 370px);
+      grid-gap: 20px;
+      justify-content: center;
+      align-items: center;
+      margin-top: 30px;
+}
+.services-card{
+  padding: 5px;
+  width: 370px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: space-between;
+  gap: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 2px 1px rgba(66, 68, 90, 0.28);
+  }
+.services-card h3{
+      color: #333;
+  }
+.services-card p{
+  color: var(--light-gray);
+}
+.services-icons{
+      width: 54px;
+      height: 54px;
+      justify-content: center;
+      align-items: center;
+  }
+
+@media (max-width: 1228px)  {
+  .services{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);;
+      grid-gap: 20px;
+  }
+
+  .services-card{
+      width: 300px;
+      height: 100px
+      }
+  }
+
+  @media (max-width: 1024px)  {
+      .services{
+          display: grid;
+          grid-template-columns: 400px;
+          grid-gap: 20px;
+      }
+  
+      .services-card{
+          width: 400px;
+          height: 100px
+          }
+
+      .services-card h3 , .services-card p{
+              font-size: 17px;
+          } 
+      }
+
+@media (max-width: 640px)  {
+      .services{
+      grid-template-columns: 360px;
+      grid-template-rows: repeat(3, 1fr);
+      grid-gap: 20px;
+      }
+
+      .services-card h3 , .services-card p{
+          font-size: 15px;
+      }  
+
+      .services-card{
+          width: 350px;
+          height: 100px
+          }
+  }
+
+/* services end */
+
+
+/* product section */
+.product-card-container{
+  /* width: 80%; */
+  display: grid;
+  grid-template-columns: repeat(5, 210px);
+  grid-gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-top: var(--main-padding-top);
+  margin-bottom: var(--main-padding-bottom);
+}
+
+@media screen and (max-width: 1228px) {
+  .product-card-container{
+      grid-template-columns: repeat(4, 210px);
+      grid-gap: 10px;
+    
+  }
+}
+  
+@media screen and (max-width: 1024px) {
+  .product-card-container{
+      grid-template-columns: repeat(3, 210px);
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .product-card-container{
+      grid-template-columns: repeat(2, 210px);
+      grid-gap: 30px;
+  }
+}
+
+.product-card {
+  margin: 0;
+  padding: 5px;
+  width: 210px;
+  height: 412px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 5px;
+} 
+
+.product-card:hover{
+  box-shadow: 6px 6px 12px var(--light-gray),
+  -6px -6px 12px #ffffff;
+  transform: scale(1.05);
+  transition: all 0.5s ease;
+}
+
+/* produt card info start - price, category*/
+.product-name {
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  color: var(--black);
+  text-align: center;
+}
+
+.product-category {
+  font-size: 12px;
+  color: var(--light-gray);
+  text-align: center;
+  font-weight: 300;
+}
+
+.fa-star, .fa-star-half-stroke{
+  color: #ffb21e;
+  font-size: 12px;
+}
+
+.fa-bag-shopping{
+  color: var(--main-color);
+}
+
+.product-price{
+  margin-top: 5px;
+  display: flex;
+  /* font-size: 15px; */
+  color: var(--secondary-color);
+  font-weight: 600;
+  text-align: center;
+  align-items: center;
+  
+}
+
+.strikethrough{
+  text-decoration: line-through;
+  color: var(--light-gray);
+  font-size: 12px;
+  text-align: center;
+}
+
+.product-info{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-top: 0;
+  border-top: 1px solid var(--light-gray);
+}
+
+/* produt card info end */
+
+
+/* Product Image Start */
+.product-image{
+  width: 207px;
+  height: 207px;
+  border-radius: .5rem;
+  transition: .3s ease;
+}
+
+.product-image:hover {
+  transform: translateY(-2%);
+  box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+ }
+ 
+.favourite {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-color);
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  left: 15px;
+  padding: 0;
+  z-index: 1;
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
+}
+
+.promo-tag{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+  width: 42px;
+  height: 18px;
+  background-color: var(--secondary-color);
+  border-radius: 10px 0px 10px 0px;
+  border-color: aqua;
+}
+
+.promo-text{
+  font-size: 12px;
+  color: var(--main-color);
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.promo-drop{
+  background-color: #e42323;
+}
+
+/* Product Image End */
+
+/* Add to Cart Button Start */
+.add-to-cart-btn {
+  width: 130px;
+  height: 30px;
+  background: var(--light-gray);
+  color: var(--main-color);
+  /* font-size: 14px; */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: var(--main-transition) ease-in-out;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.add-to-cart-btn:hover {
+  border: 1px solid #ffcaa6;
+  background-color: #ffcaa6;
+ }
+
+
+
+/* Add to Cart Button End */
 /* End products section */
 /* Start our history section */
 .history {
