--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600&display=swap");
 /* Start Global Rules */
 * {
   -webkit-box-sizing: border-box;
@@ -61,11 +61,38 @@ ul {
     width: 1170px;
   }
 }
+/* Arrows */
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
 
+.arrowright {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.arrowleft {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+
+.arrowup {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.arrowdown {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
 /* End Global Rules */
 /* Start Landing Section */
 /* child static top section */
 .landing {
+  height: 100vh;
 }
 .landing .top-section {
   color: white;
@@ -91,6 +118,7 @@ ul {
   align-items: center;
   margin-left: 35px;
   cursor: pointer;
+  position: relative;
 }
 
 .landing .top-section .right .child::after {
@@ -108,60 +136,266 @@ ul {
 .landing .top-section .child p {
   margin-left: 10px;
 }
-.landing .top-section .child:hover .fa {
+
+.landing .top-section .right .child .arrow {
+  border-color: white;
+  border-width: 0px 1px 1px 0px;
+  position: absolute;
+  top: 38%;
+  right: -10px;
+}
+/* promotion banner */
+.landing .promotion-banner {
+  height: 130px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #98989e;
+}
+.landing .promotion-banner .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.landing .promotion-banner img {
+  height: 70px;
+  margin-right: 150px;
+}
+.landing .promotion-banner .container .searchBox {
+  border: 1px solid var(--black);
+  border-radius: 6px;
+  overflow: hidden;
+  border-color: #bdbdc6;
+  margin-right: 100px;
+}
+.landing .promotion-banner .container .search {
+  display: flex;
+}
+.landing .promotion-banner .container .search .dropdown {
+  background-color: #f7f8fc;
+  padding: 13px 35px;
+  position: relative;
+  border-radius: 5px 0px 0px 5px;
+  cursor: pointer;
+  border: 1px solid #e5e6ec;
+  border-right: none;
+}
+.landing .promotion-banner .container .search .dropdown i {
+  margin-left: 10px;
+  margin-right: 10px;
+  position: absolute;
+  top: 35%;
+  cursor: pointer;
+  border-width: 0px 1px 1px 0px;
+  border-color: #8e8e95;
+}
+.landing .promotion-banner .container .search input {
+  width: 300px;
+  text-align: left;
+  border: none;
+  padding-left: 10px;
+  border-top: 1px solid #e5e6ec;
+  border-bottom: 1px solid #e5e6ec;
+}
+.landing .promotion-banner .container .search input::placeholder {
+  color: #e7e7e8;
+}
+.landing .promotion-banner .container .search input:focus {
+  outline: none;
+}
+.landing .promotion-banner .container .search .searchBtn {
+  padding: 13px 35px;
+  background-color: var(--secondary-color);
+  color: white;
+  border-radius: 0px 5px 5px 0px;
+  cursor: pointer;
+}
+.landing .promotion-banner .container .search .searchBtn:hover {
+  background-color: rgb(0, 161, 206);
+}
+.landing .promotion-banner .container .info {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+.landing .promotion-banner .container .info i {
+  padding-right: 10px;
+  color: #48484c;
+  font-size: 20px;
+  cursor: pointer;
+}
+.landing .promotion-banner .container .info .lightgray {
+  color: #bdbdc6;
+}
+/* Divider */
+.landing .divider {
+  height: 56px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  border-bottom: 1px solid #e5e6ec;
+}
+.landing .divider .container {
+  display: flex;
+  align-items: flex-end;
+}
+.landing .divider .categories {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 33px;
+  border-radius: 5px 5px 0px 0px;
+  color: white;
+  background-color: var(--secondary-color);
+  bottom: 0;
+  position: absolute;
+}
+.landing .divider .categories p {
+  margin: 0;
+  margin-right: 35px;
+  font-size: 14px;
+}
+.landing .divider .categories-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 23px;
+  padding-left: 250px;
+}
+.landing .divider .categories-items p {
+  margin-right: 35px;
+  color: #76767e;
+  cursor: pointer;
+}
+.landing .divider .categories-items p:hover {
   color: var(--secondary-color);
 }
+/* Slider products */
+.landing .slider-products {
+  position: relative;
+  height: calc(100vh - (56px + 130px + 50px));
+  background-image: url(../Assets/Landing\ section\ background.png);
+}
+.landing .slider-products .container {
+  display: flex;
+}
+.landing .slider-products .slider {
+  padding: 10px 24px;
+  font-size: 13.5px;
+  border: 1px solid #e5e6ec;
+  border-top: none;
+  top: 0;
+  color: #76767e;
+  border-radius: 0px 0px 5px 5px;
+  background-color: white;
+}
+.landing .slider-products .slider li {
+  padding: 11px 10px;
+  position: relative;
+  cursor: pointer;
+}
+.landing .slider-products .slider li:not(:last-child) {
+  border-bottom: 1px solid #e5e6ec;
+}
+.landing .slider-products .slider i:first-child {
+  padding-right: 10px;
+}
+.landing .slider-products .slider i:last-child {
+  position: absolute;
+  right: -8px;
+  top: 35%;
+  border-color: #76767e;
+  border-width: 0px 1px 1px 0px;
+}
+.landing .slider-products .product-view {
+  background-color: white;
+  flex-grow: 1;
+  margin-left: 15px;
+  margin-top: 15px;
+  padding: 20px 20px;
+  color: var(--black);
+  background-image: url(../Assets/landingimage.png);
+}
 
+.landing .slider-products .product-view p:first-child {
+  color: var(--secondary-color);
+  margin-top: 100px;
+  font-size: 19px;
+  padding: 0;
+}
+.landing .slider-products .product-view p:nth-child(4) {
+  font-size: 20px;
+}
+.landing .slider-products .product-view .price {
+  color: var(--secondary-color);
+}
+.landing .slider-products .product-view .btn {
+  background-color: var(--secondary-color);
+  width: fit-content;
+  font-size: 14px;
+  font-weight: 500;
+  color: white;
+  padding: 8px 40px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.landing .slider-products .product-view .btn:hover {
+  background-color: rgb(0, 161, 206);
+}
+.landing .slider-products .product-view h1 {
+  padding: 0px;
+  margin: 0px;
+  font-weight: 600;
+  font-size: 40px;
+}
 /* End Landing Section */
 /* Start products section */
 .products {
 }
 
 /* welcome section start */
-.welcome-section{
+.welcome-section {
   /* width: 100%; */
   /* height: 100vh; */
   text-align: center;
   font-size: 18px;
   margin-right: 30px;
   margin-left: 30px;
-
 }
 
-.welcome-section h4{
+.welcome-section h4 {
   line-height: 30px;
   font-weight: 400;
 }
 
-.welcome-section h5{
+.welcome-section h5 {
   font-size: 18px;
   color: #2fc2e2;
   margin-bottom: 10px;
   font-weight: 300;
 }
 
-.welcome-section h3{
+.welcome-section h3 {
   font-size: 30px;
   margin-bottom: 10px;
 }
 
-@media (max-width: 640px)  {
-  .welcome-section{
-      font-size: 15px;
-  } 
+@media (max-width: 640px) {
+  .welcome-section {
+    font-size: 15px;
+  }
 }
-
 
 /* services start */
-.services{
-      display: grid;
-      grid-template-columns: repeat(3, 370px);
-      grid-gap: 20px;
-      justify-content: center;
-      align-items: center;
-      margin-top: 30px;
+.services {
+  display: grid;
+  grid-template-columns: repeat(3, 370px);
+  grid-gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
 }
-.services-card{
+.services-card {
   padding: 5px;
   width: 370px;
   height: 100px;
@@ -173,72 +407,73 @@ ul {
   gap: 10px;
   border-radius: 5px;
   box-shadow: 0px 0px 2px 1px rgba(66, 68, 90, 0.28);
-  }
-.services-card h3{
-      color: #333;
-  }
-.services-card p{
+}
+.services-card h3 {
+  color: #333;
+}
+.services-card p {
   color: var(--light-gray);
 }
-.services-icons{
-      width: 54px;
-      height: 54px;
-      justify-content: center;
-      align-items: center;
+.services-icons {
+  width: 54px;
+  height: 54px;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 1228px) {
+  .services {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
   }
 
-@media (max-width: 1228px)  {
-  .services{
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);;
-      grid-gap: 20px;
+  .services-card {
+    width: 300px;
+    height: 100px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .services {
+    display: grid;
+    grid-template-columns: 400px;
+    grid-gap: 20px;
   }
 
-  .services-card{
-      width: 300px;
-      height: 100px
-      }
+  .services-card {
+    width: 400px;
+    height: 100px;
   }
 
-  @media (max-width: 1024px)  {
-      .services{
-          display: grid;
-          grid-template-columns: 400px;
-          grid-gap: 20px;
-      }
-  
-      .services-card{
-          width: 400px;
-          height: 100px
-          }
-
-      .services-card h3 , .services-card p{
-              font-size: 17px;
-          } 
-      }
-
-@media (max-width: 640px)  {
-      .services{
-      grid-template-columns: 360px;
-      grid-template-rows: repeat(3, 1fr);
-      grid-gap: 20px;
-      }
-
-      .services-card h3 , .services-card p{
-          font-size: 15px;
-      }  
-
-      .services-card{
-          width: 350px;
-          height: 100px
-          }
+  .services-card h3,
+  .services-card p {
+    font-size: 17px;
   }
+}
+
+@media (max-width: 640px) {
+  .services {
+    grid-template-columns: 360px;
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
+
+  .services-card h3,
+  .services-card p {
+    font-size: 15px;
+  }
+
+  .services-card {
+    width: 350px;
+    height: 100px;
+  }
+}
 
 /* services end */
 
-
 /* product section */
-.product-card-container{
+.product-card-container {
   /* width: 80%; */
   display: grid;
   grid-template-columns: repeat(5, 210px);
@@ -250,23 +485,22 @@ ul {
 }
 
 @media screen and (max-width: 1228px) {
-  .product-card-container{
-      grid-template-columns: repeat(4, 210px);
-      grid-gap: 10px;
-    
+  .product-card-container {
+    grid-template-columns: repeat(4, 210px);
+    grid-gap: 10px;
   }
 }
-  
+
 @media screen and (max-width: 1024px) {
-  .product-card-container{
-      grid-template-columns: repeat(3, 210px);
+  .product-card-container {
+    grid-template-columns: repeat(3, 210px);
   }
 }
 
 @media screen and (max-width: 640px) {
-  .product-card-container{
-      grid-template-columns: repeat(2, 210px);
-      grid-gap: 30px;
+  .product-card-container {
+    grid-template-columns: repeat(2, 210px);
+    grid-gap: 30px;
   }
 }
 
@@ -281,18 +515,17 @@ ul {
   align-items: center;
   position: relative;
   border-radius: 5px;
-} 
+}
 
-.product-card:hover{
-  box-shadow: 6px 6px 12px var(--light-gray),
-  -6px -6px 12px #ffffff;
+.product-card:hover {
+  box-shadow: 6px 6px 12px var(--light-gray), -6px -6px 12px #ffffff;
   transform: scale(1.05);
   transition: all 0.5s ease;
 }
 
 /* produt card info start - price, category*/
 .product-name {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   color: var(--black);
   text-align: center;
@@ -305,16 +538,17 @@ ul {
   font-weight: 300;
 }
 
-.fa-star, .fa-star-half-stroke{
+.fa-star,
+.fa-star-half-stroke {
   color: #ffb21e;
   font-size: 12px;
 }
 
-.fa-bag-shopping{
+.fa-bag-shopping {
   color: var(--main-color);
 }
 
-.product-price{
+.product-price {
   margin-top: 5px;
   display: flex;
   /* font-size: 15px; */
@@ -322,17 +556,16 @@ ul {
   font-weight: 600;
   text-align: center;
   align-items: center;
-  
 }
 
-.strikethrough{
+.strikethrough {
   text-decoration: line-through;
   color: var(--light-gray);
   font-size: 12px;
   text-align: center;
 }
 
-.product-info{
+.product-info {
   margin-top: 5px;
   margin-bottom: 5px;
   padding-top: 0;
@@ -341,20 +574,20 @@ ul {
 
 /* produt card info end */
 
-
 /* Product Image Start */
-.product-image{
+.product-image {
   width: 207px;
   height: 207px;
-  border-radius: .5rem;
-  transition: .3s ease;
+  border-radius: 0.5rem;
+  transition: 0.3s ease;
 }
 
 .product-image:hover {
   transform: translateY(-2%);
-  box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
- }
- 
+  box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px,
+    rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+}
+
 .favourite {
   display: flex;
   justify-content: center;
@@ -368,10 +601,11 @@ ul {
   left: 15px;
   padding: 0;
   z-index: 1;
-  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
-.promo-tag{
+.promo-tag {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -383,7 +617,7 @@ ul {
   border-color: aqua;
 }
 
-.promo-text{
+.promo-text {
   font-size: 12px;
   color: var(--main-color);
   text-align: center;
@@ -391,7 +625,7 @@ ul {
   margin: 0;
 }
 
-.promo-drop{
+.promo-drop {
   background-color: #e42323;
 }
 
@@ -415,9 +649,7 @@ ul {
 .add-to-cart-btn:hover {
   border: 1px solid #ffcaa6;
   background-color: #ffcaa6;
- }
-
-
+}
 
 /* Add to Cart Button End */
 /* End products section */
