--- a/Styles/style.css
+++ b/Styles/style.css
@@ -99,6 +99,11 @@ ul {
   color: white;
   background-color: var(--black);
 }
+@media (max-width: 768px) {
+  .landing .top-section {
+    display: none;
+  }
+}
 .landing .top-section .container {
   height: 50px;
   display: flex;
@@ -153,6 +158,11 @@ ul {
   align-items: center;
   color: #98989e;
 }
+@media (max-width: 768px) {
+  .landing .promotion-banner {
+    height: 50px;
+  }
+}
 .landing .promotion-banner .container {
   display: flex;
   justify-content: space-between;
@@ -162,12 +172,26 @@ ul {
   height: 70px;
   margin-right: 45px;
 }
+@media (max-width: 768px) {
+  .landing .promotion-banner img {
+    height: 25px;
+    margin-right: 10px;
+    position: absolute;
+    top: 70px;
+    left: 20px;
+  }
+}
 .landing .promotion-banner .container .searchBox {
   border: 1px solid var(--black);
   border-radius: 6px;
   overflow: hidden;
   border-color: #bdbdc6;
   margin-right: 100px;
+}
+@media (max-width: 768px) {
+  .landing .promotion-banner .container .searchBox {
+    margin-right: 30px;
+  }
 }
 .landing .promotion-banner .container .search {
   display: flex;
@@ -191,6 +215,15 @@ ul {
   outline: none;
   appearance: none;
 }
+@media (max-width: 768px) {
+  .landing .promotion-banner .container .search .select select {
+    width: 70px;
+    padding: 5px 12px;
+    padding-left: 2px;
+    font-size: 10px;
+    border-radius: 3px 0px 0px 3px;
+  }
+}
 .landing .promotion-banner .container .search .select {
   position: relative;
 }
@@ -207,7 +240,13 @@ ul {
   color: var(--light-gray);
   z-index: 100;
 }
-
+@media (max-width: 768px) {
+  .landing .promotion-banner .container .search .select::before {
+    font-size: 8px;
+    right: 0px;
+    top: 35%;
+  }
+}
 .landing .promotion-banner .container .search input {
   width: 300px;
   text-align: left;
@@ -215,6 +254,12 @@ ul {
   padding-left: 10px;
   border-top: 1px solid #e5e6ec;
   border-bottom: 1px solid #e5e6ec;
+}
+@media (max-width: 768px) {
+  .landing .promotion-banner .container .search input {
+    width: 170px;
+    font-size: 10px;
+  }
 }
 .landing .promotion-banner .container .search input::placeholder {
   color: #e7e7e8;
@@ -229,6 +274,21 @@ ul {
   border-radius: 0px 5px 5px 0px;
   cursor: pointer;
 }
+@media (max-width: 768px) {
+  .landing .promotion-banner .container .search .searchBtn {
+    font-weight: 400;
+    font-size: 10px;
+    padding: 3px 7px;
+    border-radius: 0px 3px 3px 0px;
+    display: flex;
+    align-items: center;
+  }
+}
+@media (max-width: 768px) {
+  .landing .promotion-banner .container .search {
+    margin-right: 10px;
+  }
+}
 .landing .promotion-banner .container .search .searchBtn:hover {
   background-color: rgb(0, 161, 206);
 }
@@ -237,11 +297,26 @@ ul {
   align-items: center;
   font-size: 14px;
 }
+@media (max-width: 768px) {
+  .landing .promotion-banner .container .info {
+    font-size: 10px;
+    padding-left: 10px;
+  }
+  .landing .promotion-banner .container .info p {
+    display: none;
+  }
+}
 .landing .promotion-banner .container .info i {
-  padding-right: 10px;
   color: #48484c;
   font-size: 20px;
   cursor: pointer;
+  padding-right: 10px;
+}
+@media (max-width: 768px) {
+  .landing .promotion-banner .container .info i {
+    font-size: 16px;
+    padding-right: 10px;
+  }
 }
 .landing .promotion-banner .container .info .lightgray {
   color: #bdbdc6;
@@ -254,6 +329,7 @@ ul {
   align-items: center;
   position: relative;
   border-bottom: 1px solid #e5e6ec;
+  z-index: 9999;
 }
 .landing .divider .container {
   display: flex;
@@ -269,14 +345,31 @@ ul {
   bottom: 0;
   position: absolute;
 }
+
 .landing .divider .categories i {
   cursor: pointer;
 }
-
+@media (max-width: 768px) {
+  .landing .divider .categories {
+    background-color: transparent;
+    color: var(--secondary-color);
+  }
+  .landing .divider .categories i {
+    position: absolute;
+    top: -60px;
+    left: 10px;
+  }
+}
 .landing .divider .categories p {
   margin: 0;
   margin-right: 35px;
   font-size: 14px;
+}
+@media (max-width: 768px) {
+  .landing .divider .categories p {
+    display: none;
+    margin-right: 0px;
+  }
 }
 .landing .divider .categories-items {
   display: flex;
@@ -285,8 +378,14 @@ ul {
   margin-left: 23px;
   padding-left: 250px;
 }
+@media (max-width: 768px) {
+  .landing .divider .categories-items {
+    font-size: 11px;
+    padding-left: 60px;
+  }
+}
 .landing .divider .categories-items p {
-  margin-right: 35px;
+  margin-right: 16px;
   color: #76767e;
   cursor: pointer;
 }
@@ -299,10 +398,12 @@ ul {
   height: calc(100vh - (56px + 130px + 50px));
   background-image: url(../Assets/Landing\ section\ background.png);
 }
+
 .landing .slider-products .container {
   display: flex;
   overflow: hidden;
 }
+
 .landing .slider-products .slider {
   width: 260px;
   font-size: 13.5px;
@@ -314,8 +415,16 @@ ul {
   background-color: white;
   transition: transform 0.5s ease-in-out;
 }
+@media (max-width: 768px) {
+  .landing .slider-products .slider {
+    position: absolute;
+    left: 0;
+    z-index: 1;
+    height: 100%;
+  }
+}
 .hidden {
-  transform: translateY(-500px);
+  transform: translateX(-400px);
   overflow: hidden;
   transition: transform 0.5s ease-in-out;
 }
@@ -323,6 +432,12 @@ ul {
   padding: 11px 10px;
   position: relative;
   cursor: pointer;
+}
+@media (max-width: 768px) {
+  .landing .slider-products .slider li {
+    padding: 15px 10px;
+    z-index: 99999;
+  }
 }
 .landing .slider-products .slider li:hover {
   color: var(--secondary-color);
