--- a/Styles/style.css
+++ b/Styles/style.css
@@ -633,6 +633,7 @@ ul {
   justify-content: center;
   align-items: center;
   padding-top: 50px;
+  padding-bottom: 50px;
   margin-bottom: var(--main-padding-bottom);
   overflow: hidden;
 }
