--- a/Styles/style.css
+++ b/Styles/style.css
@@ -159,8 +159,16 @@ ul {
   color: #98989e;
 }
 @media (max-width: 768px) {
+  .landing .promotion-banner .container {
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
   .landing .promotion-banner {
     height: 50px;
+    position: relative;
   }
 }
 .landing .promotion-banner .container {
@@ -222,6 +230,7 @@ ul {
     padding-left: 2px;
     font-size: 10px;
     border-radius: 3px 0px 0px 3px;
+    height: 32px;
   }
 }
 .landing .promotion-banner .container .search .select {
@@ -259,7 +268,7 @@ ul {
 }
 @media (max-width: 768px) {
   .landing .promotion-banner .container .search input {
-    width: 90px;
+    width: 190px;
     font-size: 10px;
   }
 }
@@ -288,7 +297,10 @@ ul {
 }
 @media (max-width: 768px) {
   .landing .promotion-banner .container .search {
-    margin-right: 10px;
+    margin-right: 0px;
+    margin-left: 40px;
+    padding-right: 0px;
+    height: 32px;
   }
 }
 .landing .promotion-banner .container .search .searchBtn:hover {
@@ -359,7 +371,7 @@ ul {
   }
   .landing .divider .categories i {
     position: absolute;
-    font-size: 18px;
+    font-size: 21px;
     top: -60px;
     left: 10px;
   }
@@ -469,6 +481,11 @@ ul {
   background-image: url(../Assets/landingimage.png);
 }
 
+@media (max-width: 768px) {
+  .landing .slider-products .product-view {
+    margin: 15px;
+  }
+}
 .landing .slider-products .product-view p:first-child {
   color: var(--secondary-color);
   margin-top: 100px;
