--- a/Styles/style.css
+++ b/Styles/style.css
@@ -229,7 +229,7 @@ ul {
     padding: 5px 12px;
     padding-left: 2px;
     font-size: 10px;
-    border-radius: 3px 0px 0px 3px;
+    border-radius: 3px;
     height: 32px;
   }
 }
@@ -271,6 +271,7 @@ ul {
     width: 190px;
     font-size: 14px;
     border: 1px solid #e5e6ec;
+    border-radius: 3px;
   }
 }
 .landing .promotion-banner .container .search input::placeholder {
@@ -291,7 +292,7 @@ ul {
     font-weight: 400;
     font-size: 10px;
     padding: 3px 7px;
-    border-radius: 0px 3px 3px 0px;
+    border-radius: 3px;
     display: flex;
     align-items: center;
   }
