--- a/Styles/style.css
+++ b/Styles/style.css
@@ -92,6 +92,7 @@ ul {
 /* Start Landing Section */
 /* child static top section */
 .landing {
+  position: relative;
   height: 100vh;
   margin-bottom: var(--main-padding-bottom);
 }
@@ -99,6 +100,7 @@ ul {
   color: white;
   background-color: var(--black);
 }
+
 @media (max-width: 768px) {
   .landing .top-section {
     display: none;
@@ -495,6 +497,15 @@ ul {
   font-size: 19px;
   padding: 0;
 }
+@media (max-width: 768px) {
+  .landing .slider-products .product-view p:first-child {
+    margin-top: 10px;
+  }
+  .landing .slider-products .product-view p:nth-child(3) {
+    width: 133px;
+    font-size: 13px;
+  }
+}
 .landing .slider-products .product-view p:nth-child(4) {
   font-size: 20px;
 }
@@ -520,6 +531,7 @@ ul {
   font-weight: 600;
   font-size: 40px;
 }
+
 /* End Landing Section */
 /* Start products section */
 .products {
