--- a/Styles/style.css
+++ b/Styles/style.css
@@ -489,6 +489,7 @@ ul {
 @media (max-width: 768px) {
   .landing .slider-products .product-view {
     margin: 15px;
+    margin-top: 80px;
   }
 }
 .landing .slider-products .product-view p:first-child {
